src/fixtures/errors/callback-expr-error.lua
local json = require("@lmb/json")
return json.decode("{")
